--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -101,8 +101,6 @@
 	Year = 2004
  }
 
-
-
 @book{Venables:2002qv,
 	Author = {Venables, William N. and Ripley, Brian D.},
 	Date-Added = {2015-08-24 11:44:39 +0000},
@@ -111,3 +109,73 @@
 	Title = {Modern applied statistics with S},
 	Year = 2002}
 
+
+@techreport{Resnick:2005yu,
+	Author = {Resnick, Mitchel and Myers, Brad and Nakakoji, Kumiyo and Shneiderman, Ben and Pausch, Randy and Selker, Ted and Eisenberg, Mike},
+	Institution = {Institute for Software Research, School of Computer Science, Carnegie Mellon University},
+	Title = {Design principles for tools to support creative thinking},
+	Url = {http://repository.cmu.edu/isr/816},
+	Year = {2005}}
+
+@article{Shneiderman:2007qv,
+ author = {Shneiderman, Ben},
+ title = {Creativity Support Tools: Accelerating Discovery and Innovation},
+ journal = {Commun. ACM},
+ issue_date = {December 2007},
+ volume = {50},
+ number = {12},
+ month = dec,
+ year = {2007},
+ issn = {0001-0782},
+ pages = {20--32},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/1323688.1323689},
+ doi = {10.1145/1323688.1323689},
+ acmid = {1323689},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@inproceedings{England:2014ys,
+ author = {England, David and Spence, Jocelyn and Latulipe, Celine and Edmonds, Ernest and Candy, Linda and Schiphorst, Thecla and Bryan-Kinns, Nick and Woolford, Kirk},
+ title = {Curating the Digital: Spaces for Art and Interaction},
+ booktitle = {CHI '14 Extended Abstracts on Human Factors in Computing Systems},
+ series = {CHI EA '14},
+ year = {2014},
+ isbn = {978-1-4503-2474-8},
+ location = {Toronto, Ontario, Canada},
+ pages = {21--24},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2559206.2559222},
+ doi = {10.1145/2559206.2559222},
+ acmid = {2559222},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {collaboration, digital art, interaction, interdisciplinary, performance art},
+} 
+
+
+@inproceedings{Martin:2014cr,
+	Acmid = {2557226},
+	Address = {New York, NY, USA},
+	Author = {Martin, Charles and Gardner, Henry and Swift, Ben},
+	Booktitle = {Proc. CHI '14},
+	Date-Added = {2014-04-26 22:46:30 +0000},
+	Date-Modified = {2015-07-21 06:11:01 +0000},
+	Isbn = {978-1-4503-2473-1},
+	Keywords = {expression, gesture, multitouch, music, percussion, user experience},
+	Location = {Toronto, Ontario, Canada},
+	Numpages = {4},
+	Pages = {1025--1028},
+	Publisher = {ACM},
+	Title = {Exploring Percussive Gesture on i{P}ads with {E}nsemble {M}etatone},
+	Year = {2014}}
+
+
+@book{Schick:2006fk,
+	Author = {Steven Schick},
+	Date-Added = {2013-09-11 05:34:45 +0000},
+	Date-Modified = {2013-09-11 05:35:45 +0000},
+	Publisher = {University of Rochester Press},
+	Title = {The Percussionist's Art: Same Bed, Different Dreams},
+	Year = {2006}}
